--- a/rt/rtwalk.1
+++ b/rt/rtwalk.1
@@ -48,7 +48,11 @@ validation, interference checking in part articulation,
 and numerically controlled milling.
 .LP
 This program is especially interesting when used on complex scenes
-like those made by proc-db/clutter.c.
+like those made by proc-db/clutter.c, eg:
+.sp .5
+      rtwalk -X1 -- -3470 -3470 650 3470 3470 650 ../proc-db/c.g clut |
+      plot-fb -i
+.sp
 .SH "SEE ALSO"
 mged(1), rt(1), rtray(1), pix-fb(1), rtray(1), rtpp(1),
 librt(3), ray(5V), pix(5).
