Changed bottom part from 1/6th of the screen to 1/4th, to match the behavior of the Lyon-Lamb ENC VI color bars

--- a/fb/fbcbars.1
+++ b/fb/fbcbars.1
@@ -37,7 +37,7 @@ set both the height and width to the size given.
 .PP
 The color scale is arranged
 arranged horizontally on screen.
-The bottom 1/6th of the screen will be
+The bottom quarter of the screen will be
 black, white, dark gray (31%), black.
 The upper portion of the screen will be
 75% gray, yellow, cyan, green, magenta, red, blue,
